# Shell_Arc_Railgun_scheduler

./: .gitignore  README.md  pyproject.toml  technical_note.tex
python/: cone_equation.py  data_struct.py  reallocate.py  standard_offset.py
python/shellarc_railgun/analysis_core/: frontend_momentum.py  ideal_deviation.py
python/shellarc_railgun/computation_core/density/: point_density.py
python/shellarc_railgun/computation_core/intercepts/: component_day_plane.py  cut_component_plane.py
python/shellarc_railgun/computation_core/z_offset/: cone_equation.py  reallocate_pts.py  z_offset.py
python/shellarc_railgun/data_model/: data_struct.py
