[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/shellarc_railgun"]

[project]
name = "ShellArc_Railgun"
version = "1.0.0"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "matplotlib"
]
requires-python = ">=3.9"
authors = [
  {name = "shinonome-MiDUki", email = "shiinaayame3@gmail.com"}
]
maintainers = [
  {name = "shinonome-MiDUki", email = "shiinaayame3@gmail.com"}
]
description = "ShellArc Railgun Architecture 1.0.0"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["python", "shell_arc"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[project.urls]
Documentation = "https://github.com/shinonome-MiDUki/Shell_Arc_Railgun_scheduler"
Repository = "https://github.com/shinonome-MiDUki/Shell_Arc_Railgun_scheduler.git"
Changelog = "https://github.com/shinonome-MiDUki/Shell_Arc_Railgun_scheduler/changelog.txt"


